Inca Plugin/src/main/java/language/FuncInca.bnf
{
  parserClass="language.parser.FuncIncaParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="FuncInca"
  psiImplClassSuffix="Impl"
  psiPackage="language.psi"
  psiImplPackage="language.psi.impl"

  elementTypeHolderClass="language.psi.FuncIncaTypes"
  elementTypeClass="language.psi.FuncIncaElementType"
  tokenTypeClass="language.psi.FuncIncaTokenType"

  psiImplUtilClass="language.psi.impl.FuncIncaPsiImplUtil"

  tokens = [
    keyword_if = "if"
    keyword_else = "else"
    keyword_let = "let"
    keyword_in = "in"
    keyword_match = "match"
    keyword_case = "case"
    keyword_fail = "fail"
    keyword_Option = "Option"
    keyword_None = "None"
    keyword_Some = "Some"
    keyword_Set = "Set"
    keyword_fold = "fold"
    keyword_module = "module"
    keyword_import = "import"
    keyword_not = "not"
    keyword_data = "data"
    keyword_def = "def"

    boolean_true = "true"
    boolean_false = "false"
    type_nothing = "Nothing"
    type_any = "Any"
    type_unit = "Unit"

    parens_open = "("
    parens_close = ")"
    braces_open = "{"
    braces_close ="}"
    square_bracket_open = "["
    square_bracket_close = "]"

    plus = "+"
    minus = "-"
    star = "*"
    slash = "/"
    modulo = "%"
    and = "&&"
    or ="||"
    lt = "<"
    gt = ">"
    equivalence = "=="
    leq = "<="
    geq = ">="
    non_equivalence = "!="
    set_union = "++"
    set_intersection = "&"
    negation = "!"

    cast = "as"
    back_tick = "`"
    quotation_mark = "\""
    dot = "."
    comma = ","
    colon = ":"
    arrow = "=>"
    equal_sign = "="
    bar = "|"

    annotation_main = "@main"
    visibility_private = "private"

    space = "regexp:\s+"                    // any possible whitespaces: [ \t\n\x0B\f\r]
    id = "regexp:[a-zA-Z_]\w*"              // starts with any letter, continues with word characters [a-zA-Z_0-9]
    string = "regexp:\"([^\"\\]|\\.)*\""    // any number of any characters between quotation marks
    scala_term = "regexp:`.[^`]*`"          // any Number of any characters between ticks ` and `
    integer = "regexp:\d+"                  // integers with digits \d = [0-9]
    long = "regexp:\d+(l|L)"                // longs with digits \d = [0-9]
    double = "regexp:(\d+\.\d+(d|D)?)|\d+(d|D)"
    comment = "regexp:(//.*)|(/\*(.|\n)*\*/)"
    ]

  methods("param|import|fun_def|param_type|data_def|data_constructor|var_id")=[getName setName getNameIdentifier]
  implements("param|import|fun_def|param_type|data_def|data_constructor|var_id")="language.psi.FuncIncaNamedElement"
  mixin("param|import|fun_def|param_type|data_def|data_constructor|var_id")="language.psi.FuncIncaNamedElementImpl"

}

module ::= keyword_module id import* module_content* {pin = 1}
import ::= keyword_import id {pin = 1}
private module_content ::= fun_def | data_def
/*
private parens_recover ::= !('{' | '}' | '(' | ')' | '[' | '[')
private keywords_recover ::= !('module' | 'data' | 'def' | 'if' | 'else' | 'let' | 'in' | 'match' | 'case' | 'fail' |
                                'Option' | 'None' | 'Some' | 'Set' | 'fold' | 'import' | 'not')
*/

// definition of functions
fun_def ::= annotation* visibility? keyword_def id param_types? ('(' param_list ')')? ':' type_annotation '=' exp {pin = 3}
param_types ::= '[' param_type (',' param_type)* ']'
param_type ::= id
private param_list ::= (param (',' param)*)?
param ::= id ':' type_annotation
annotation ::= '@main'
visibility ::= 'private'

// definition of datatypes
data_def ::= annotation* visibility? keyword_data id param_types? '=' data_constructor ('|' data_constructor)* {pin = 3}
data_constructor ::= id '(' (type_annotation (',' type_annotation)*)? ')'

// expressions
exp ::= if_exp | let_exp | member_exp | infix_exp
if_exp ::= keyword_if '(' exp ')' exp keyword_else exp {pin = 1}
let_exp ::= keyword_let (single_let | multiple_let) {pin = 1}
single_let ::= var_id (':' type_annotation)? '=' infix_exp keyword_in exp
multiple_let ::= '(' var_id (':' type_annotation)? (',' let_id (':' type_annotation)?)* ')' '=' infix_exp keyword_in exp
var_id ::= id
member_exp ::= atomic_exp keyword_not? keyword_in infix_exp {pin = 3}

//infix expressions
private infix_exp ::= cast_exp | base_apply_method_exp | base_apply_infix_exp | match_exp | subinfix_exp
cast_exp ::= subinfix_exp '.' 'as' '[' type_name ']' {pin = 3}
base_apply_method_exp ::= subinfix_exp '.' scala_term ( '(' (infix_exp (',' infix_exp)*)? ')' )? {pin = 3} // scala_term = '`' id '`'
base_apply_infix_exp ::= subinfix_exp op infix_exp {pin = op}
// private recover_base_apply_infix_exp ::= ! op
private op ::= '+' | '-' | '*' | '/' | '%' // arithmetic
        | '&&' | '||' | '<' | '>' | '==' | '!=' | '<=' | '>=' // logic
        | '++' | '&' // sets
match_exp ::=  subinfix_exp keyword_match '{' match_case* '}' {pin = 2}
match_case ::= keyword_case pattern '=>' exp {pin = 1}
private pattern ::= option_pattern | constructor_pattern
option_pattern ::= 'None' | 'Some' '(' (id (',' id)*)? ')'
constructor_pattern ::= id param_types? '(' (id (',' id)*)? ')'

// subinfix expressions
private subinfix_exp ::= call_exp | lambda_exp | atomic_exp
call_exp ::= atomic_exp param_types? ('(' (exp (',' exp)*)? ')')+ {pin = 3} // + to allow composition of functions
lambda_exp ::= lambda_vars '=>' exp {pin = 2}
lambda_vars ::= '(' (id ':' type_annotation (',' id ':' type_annotation)*)? ')'

// atomic expressions (parenthesis, option, set comprehension, tuples, fold, apply scala, variables)
private atomic_exp ::= parens_exp | option_exp | comprehension_exp | const_set_exp | tuple_exp | fold_exp
               | base_apply_exp | base_lit_exp | var | base_apply_unary_exp
parens_exp ::= '(' exp ')'
option_exp ::= 'None' | 'Some' '(' (exp (',' exp)*)? ')'
comprehension_exp ::= '{' subinfix_exp '|' exp (',' exp)* '}' {pin = 3}
const_set_exp ::= '{' (exp (',' exp)*)? '}'
tuple_exp ::= '(' exp ',' exp ')'
fold_exp ::= keyword_fold ('[' type_annotation ']')? '(' exp ',' exp ',' exp ')' {pin = 1}
base_apply_exp ::= scala_term '(' (exp (',' exp)*)? ')'
var ::= id
base_apply_unary_exp ::= unary_op infix_exp {pin = 1}
private unary_op ::= '-' | '!'

// type definitions
private type_annotation ::= fun_type | atomic_type
fun_type ::= atomic_type '=>' type_annotation {pin = 2}
private recover_fun_type ::= ! atomic_type
atomic_type ::= tuple | 'Any' | 'Nothing' | 'Unit' | option | set | scala_term | constr | type_name
constr ::= id '[' type_annotation (',' type_annotation)* ']'
tuple ::= '(' (type_annotation (',' type_annotation)*)? ')'
option ::= keyword_Option '[' type_annotation ']' {pin = 1}
set ::= keyword_Set '[' type_annotation ']' {pin = 1}
type_name ::= id

// literals
private base_lit_exp ::= numeric_lit | boolean_lit | string_lit | scala_term
numeric_lit ::= integer| long | double
boolean_lit ::= 'true' | 'false'
string_lit ::= string
