Inca Plugin/src/main/gen/language/parser/FuncIncaParser.java
// This is a generated file. Not intended for manual editing.
package language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static language.psi.FuncIncaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FuncIncaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // '@main'
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, ANNOTATION_MAIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANNOTATION_MAIN);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  /* ********************************************************** */
  // parens_exp | option_exp | comprehension_exp | const_set_exp | tuple_exp | fold_exp
  //                | base_apply_exp | base_lit_exp | var | base_apply_unary_exp
  static boolean atomic_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomic_exp")) return false;
    boolean r;
    r = parens_exp(b, l + 1);
    if (!r) r = option_exp(b, l + 1);
    if (!r) r = comprehension_exp(b, l + 1);
    if (!r) r = const_set_exp(b, l + 1);
    if (!r) r = tuple_exp(b, l + 1);
    if (!r) r = fold_exp(b, l + 1);
    if (!r) r = base_apply_exp(b, l + 1);
    if (!r) r = base_lit_exp(b, l + 1);
    if (!r) r = var(b, l + 1);
    if (!r) r = base_apply_unary_exp(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // tuple | 'Any' | 'Nothing' | 'Unit' | option | set | scala_term | constr | type_name
  public static boolean atomic_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomic_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMIC_TYPE, "<atomic type>");
    r = tuple(b, l + 1);
    if (!r) r = consumeToken(b, TYPE_ANY);
    if (!r) r = consumeToken(b, TYPE_NOTHING);
    if (!r) r = consumeToken(b, TYPE_UNIT);
    if (!r) r = option(b, l + 1);
    if (!r) r = set(b, l + 1);
    if (!r) r = consumeToken(b, SCALA_TERM);
    if (!r) r = constr(b, l + 1);
    if (!r) r = type_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // scala_term '(' (exp (',' exp)*)? ')'
  public static boolean base_apply_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_exp")) return false;
    if (!nextTokenIs(b, SCALA_TERM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SCALA_TERM, PARENS_OPEN);
    r = r && base_apply_exp_2(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, BASE_APPLY_EXP, r);
    return r;
  }

  // (exp (',' exp)*)?
  private static boolean base_apply_exp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_exp_2")) return false;
    base_apply_exp_2_0(b, l + 1);
    return true;
  }

  // exp (',' exp)*
  private static boolean base_apply_exp_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_exp_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exp(b, l + 1);
    r = r && base_apply_exp_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' exp)*
  private static boolean base_apply_exp_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_exp_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!base_apply_exp_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "base_apply_exp_2_0_1", c)) break;
    }
    return true;
  }

  // ',' exp
  private static boolean base_apply_exp_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_exp_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // subinfix_exp op infix_exp
  public static boolean base_apply_infix_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_infix_exp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _COLLAPSE_, BASE_APPLY_INFIX_EXP, "<base apply infix exp>");
    r = subinfix_exp(b, l + 1);
    r = r && op(b, l + 1);
    p = r; // pin = op
    r = r && infix_exp(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // subinfix_exp '.' scala_term ( '(' (infix_exp (',' infix_exp)*)? ')' )?
  public static boolean base_apply_method_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BASE_APPLY_METHOD_EXP, "<base apply method exp>");
    r = subinfix_exp(b, l + 1);
    r = r && consumeTokens(b, 2, DOT, SCALA_TERM);
    p = r; // pin = 3
    r = r && base_apply_method_exp_3(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ( '(' (infix_exp (',' infix_exp)*)? ')' )?
  private static boolean base_apply_method_exp_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3")) return false;
    base_apply_method_exp_3_0(b, l + 1);
    return true;
  }

  // '(' (infix_exp (',' infix_exp)*)? ')'
  private static boolean base_apply_method_exp_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENS_OPEN);
    r = r && base_apply_method_exp_3_0_1(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (infix_exp (',' infix_exp)*)?
  private static boolean base_apply_method_exp_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3_0_1")) return false;
    base_apply_method_exp_3_0_1_0(b, l + 1);
    return true;
  }

  // infix_exp (',' infix_exp)*
  private static boolean base_apply_method_exp_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = infix_exp(b, l + 1);
    r = r && base_apply_method_exp_3_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' infix_exp)*
  private static boolean base_apply_method_exp_3_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3_0_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!base_apply_method_exp_3_0_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "base_apply_method_exp_3_0_1_0_1", c)) break;
    }
    return true;
  }

  // ',' infix_exp
  private static boolean base_apply_method_exp_3_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_method_exp_3_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && infix_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // unary_op infix_exp
  public static boolean base_apply_unary_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_apply_unary_exp")) return false;
    if (!nextTokenIs(b, "<base apply unary exp>", MINUS, NEGATION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _COLLAPSE_, BASE_APPLY_UNARY_EXP, "<base apply unary exp>");
    r = unary_op(b, l + 1);
    p = r; // pin = 1
    r = r && infix_exp(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // numeric_lit | boolean_lit | string_lit | scala_term
  static boolean base_lit_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_lit_exp")) return false;
    boolean r;
    r = numeric_lit(b, l + 1);
    if (!r) r = boolean_lit(b, l + 1);
    if (!r) r = string_lit(b, l + 1);
    if (!r) r = consumeToken(b, SCALA_TERM);
    return r;
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean boolean_lit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_lit")) return false;
    if (!nextTokenIs(b, "<boolean lit>", BOOLEAN_FALSE, BOOLEAN_TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LIT, "<boolean lit>");
    r = consumeToken(b, BOOLEAN_TRUE);
    if (!r) r = consumeToken(b, BOOLEAN_FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // atomic_exp param_types? ('(' (exp (',' exp)*)? ')')+
  public static boolean call_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXP, "<call exp>");
    r = atomic_exp(b, l + 1);
    r = r && call_exp_1(b, l + 1);
    r = r && call_exp_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // param_types?
  private static boolean call_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_1")) return false;
    param_types(b, l + 1);
    return true;
  }

  // ('(' (exp (',' exp)*)? ')')+
  private static boolean call_exp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = call_exp_2_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!call_exp_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_exp_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' (exp (',' exp)*)? ')'
  private static boolean call_exp_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENS_OPEN);
    r = r && call_exp_2_0_1(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (exp (',' exp)*)?
  private static boolean call_exp_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2_0_1")) return false;
    call_exp_2_0_1_0(b, l + 1);
    return true;
  }

  // exp (',' exp)*
  private static boolean call_exp_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exp(b, l + 1);
    r = r && call_exp_2_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' exp)*
  private static boolean call_exp_2_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2_0_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!call_exp_2_0_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_exp_2_0_1_0_1", c)) break;
    }
    return true;
  }

  // ',' exp
  private static boolean call_exp_2_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_exp_2_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // subinfix_exp '.' 'as' '[' type_name ']'
  public static boolean cast_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_exp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CAST_EXP, "<cast exp>");
    r = subinfix_exp(b, l + 1);
    r = r && consumeTokens(b, 2, DOT, CAST, SQUARE_BRACKET_OPEN);
    p = r; // pin = 3
    r = r && report_error_(b, type_name(b, l + 1));
    r = p && consumeToken(b, SQUARE_BRACKET_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '{' subinfix_exp '|' exp (',' exp)* '}'
  public static boolean comprehension_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comprehension_exp")) return false;
    if (!nextTokenIs(b, BRACES_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPREHENSION_EXP, null);
    r = consumeToken(b, BRACES_OPEN);
    r = r && subinfix_exp(b, l + 1);
    r = r && consumeToken(b, BAR);
    p = r; // pin = 3
    r = r && report_error_(b, exp(b, l + 1));
    r = p && report_error_(b, comprehension_exp_4(b, l + 1)) && r;
    r = p && consumeToken(b, BRACES_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' exp)*
  private static boolean comprehension_exp_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comprehension_exp_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comprehension_exp_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comprehension_exp_4", c)) break;
    }
    return true;
  }

  // ',' exp
  private static boolean comprehension_exp_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comprehension_exp_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' (exp (',' exp)*)? '}'
  public static boolean const_set_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_set_exp")) return false;
    if (!nextTokenIs(b, BRACES_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACES_OPEN);
    r = r && const_set_exp_1(b, l + 1);
    r = r && consumeToken(b, BRACES_CLOSE);
    exit_section_(b, m, CONST_SET_EXP, r);
    return r;
  }

  // (exp (',' exp)*)?
  private static boolean const_set_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_set_exp_1")) return false;
    const_set_exp_1_0(b, l + 1);
    return true;
  }

  // exp (',' exp)*
  private static boolean const_set_exp_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_set_exp_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exp(b, l + 1);
    r = r && const_set_exp_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' exp)*
  private static boolean const_set_exp_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_set_exp_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!const_set_exp_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "const_set_exp_1_0_1", c)) break;
    }
    return true;
  }

  // ',' exp
  private static boolean const_set_exp_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_set_exp_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id '[' type_annotation (',' type_annotation)* ']'
  public static boolean constr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constr")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, SQUARE_BRACKET_OPEN);
    r = r && type_annotation(b, l + 1);
    r = r && constr_3(b, l + 1);
    r = r && consumeToken(b, SQUARE_BRACKET_CLOSE);
    exit_section_(b, m, CONSTR, r);
    return r;
  }

  // (',' type_annotation)*
  private static boolean constr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constr_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constr_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constr_3", c)) break;
    }
    return true;
  }

  // ',' type_annotation
  private static boolean constr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && type_annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id param_types? '(' (id (',' id)*)? ')'
  public static boolean constructor_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && constructor_pattern_1(b, l + 1);
    r = r && consumeToken(b, PARENS_OPEN);
    r = r && constructor_pattern_3(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, CONSTRUCTOR_PATTERN, r);
    return r;
  }

  // param_types?
  private static boolean constructor_pattern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern_1")) return false;
    param_types(b, l + 1);
    return true;
  }

  // (id (',' id)*)?
  private static boolean constructor_pattern_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern_3")) return false;
    constructor_pattern_3_0(b, l + 1);
    return true;
  }

  // id (',' id)*
  private static boolean constructor_pattern_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && constructor_pattern_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' id)*
  private static boolean constructor_pattern_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constructor_pattern_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_pattern_3_0_1", c)) break;
    }
    return true;
  }

  // ',' id
  private static boolean constructor_pattern_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_pattern_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id '(' (type_annotation (',' type_annotation)*)? ')'
  public static boolean data_constructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructor")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, PARENS_OPEN);
    r = r && data_constructor_2(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, DATA_CONSTRUCTOR, r);
    return r;
  }

  // (type_annotation (',' type_annotation)*)?
  private static boolean data_constructor_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructor_2")) return false;
    data_constructor_2_0(b, l + 1);
    return true;
  }

  // type_annotation (',' type_annotation)*
  private static boolean data_constructor_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructor_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_annotation(b, l + 1);
    r = r && data_constructor_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' type_annotation)*
  private static boolean data_constructor_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructor_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_constructor_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_constructor_2_0_1", c)) break;
    }
    return true;
  }

  // ',' type_annotation
  private static boolean data_constructor_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructor_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && type_annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotation* visibility? keyword_data id param_types? '=' data_constructor ('|' data_constructor)*
  public static boolean data_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATA_DEF, "<data def>");
    r = data_def_0(b, l + 1);
    r = r && data_def_1(b, l + 1);
    r = r && consumeTokens(b, 1, KEYWORD_DATA, ID);
    p = r; // pin = 3
    r = r && report_error_(b, data_def_4(b, l + 1));
    r = p && report_error_(b, consumeToken(b, EQUAL_SIGN)) && r;
    r = p && report_error_(b, data_constructor(b, l + 1)) && r;
    r = p && data_def_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // annotation*
  private static boolean data_def_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_def_0", c)) break;
    }
    return true;
  }

  // visibility?
  private static boolean data_def_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def_1")) return false;
    visibility(b, l + 1);
    return true;
  }

  // param_types?
  private static boolean data_def_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def_4")) return false;
    param_types(b, l + 1);
    return true;
  }

  // ('|' data_constructor)*
  private static boolean data_def_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_def_7_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_def_7", c)) break;
    }
    return true;
  }

  // '|' data_constructor
  private static boolean data_def_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_def_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BAR);
    r = r && data_constructor(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
